// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField should render correctly 1`] = `
<DocumentFragment>
  .css-1wkb09n {
  width: 100%;
}

.css-1wkb09n div.react-datepicker-wrapper {
  display: block;
}

.css-1wkb09n div.react-datepicker__input-container {
  display: block;
}

.css-1wkb09n div.react-datepicker__triangle {
  display: none;
}

.css-1wkb09n div.react-datepicker__month-container {
  padding: 16px;
}

.css-1wkb09n .react-datepicker-popper {
  z-index: 1000;
}

.css-1wkb09n .calendar {
  font-family: Inter,Asap;
  border-color: #e9eaeb;
  background-color: #ffffff;
}

.css-1wkb09n .calendar .react-datepicker__header {
  color: #3f4250;
  background-color: #ffffff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.css-1wkb09n .calendar .react-datepicker__triangle {
  border-bottom-color: #f9f9fa;
}

.css-1wkb09n .calendar .react-datepicker__month {
  margin: 0;
}

.css-1wkb09n .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.css-1wkb09n .calendar .react-datepicker__day-name {
  font-family: Inter,Asap;
  color: #3f4250;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  margin: 3px;
  text-transform: capitalize;
}

.css-1wkb09n .calendar .react-datepicker__day {
  color: #727683;
  font-weight: 500;
  font-size: 16px;
  width: 26px;
  height: 26px;
  margin-left: 3px;
  margin-right: 3px;
}

.css-1wkb09n .calendar .react-datepicker__day--outside-month {
  color: #b5b7bd;
  font-weight: 500;
  font-size: 16px;
}

.css-1wkb09n .calendar .react-datepicker__day--selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.css-1wkb09n .calendar .react-datepicker__day--selected[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--selected:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.css-1wkb09n .calendar .react-datepicker__day--in-selecting-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.css-1wkb09n .calendar .react-datepicker__day--in-selecting-range[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--in-selecting-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.css-1wkb09n .calendar .react-datepicker__day--in-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.css-1wkb09n .calendar .react-datepicker__day--in-range[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--in-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.css-1wkb09n .calendar .react-datepicker__day--range-start {
  color: #ffffff;
  background-color: #8c40ef;
}

.css-1wkb09n .calendar .react-datepicker__day--range-start[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--range-start:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.css-1wkb09n .calendar .react-datepicker__day--range-end {
  color: #ffffff;
  background-color: #8c40ef;
}

.css-1wkb09n .calendar .react-datepicker__day--range-end[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--range-end:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.css-1wkb09n .calendar .react-datepicker__day--keyboard-selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.css-1wkb09n .calendar .react-datepicker__day:hover {
  color: #222638;
  background-color: #e9eaeb;
}

.css-1wkb09n .calendar .react-datepicker__day--disabled {
  color: #b5b7bd;
}

.css-1wkb09n .calendar .react-datepicker__day--disabled:hover {
  color: #b5b7bd;
  background-color: transparent;
}

.css-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1fbmuwp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1fbmuwp>.e7tir8v1 {
  color: #3f4250;
}

.css-1fbmuwp>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1fbmuwp>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1fbmuwp>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1fbmuwp>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1fbmuwp[data-success='true'] {
  border-color: #22674e;
}

.css-1fbmuwp[data-error='true'] {
  border-color: #b3144d;
}

.css-1fbmuwp[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1fbmuwp[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1fbmuwp[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1fbmuwp[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1fbmuwp[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1fbmuwp[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1fbmuwp[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1fbmuwp:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-2aies0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

.css-14gyx2a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 16px;
  border-left: 1px solid;
  border-color: inherit;
}

.css-8db7ky-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.css-8db7ky-sizeStyles .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<form>
    <div
      class="css-1wkb09n e1bm75lk1"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <div
            class=" css-16otux ehpbis70"
          >
            <div>
              <div
                class="css-1fbmuwp e7tir8v0"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  class="css-2aies0 e7tir8v1"
                  id=":r1:"
                  name="test"
                  type="text"
                  value=""
                />
                <div
                  class="css-14gyx2a e7tir8v3"
                >
                  <svg
                    class="css-8db7ky-sizeStyles e1gt4cfo0"
                    viewBox="0 0 20 20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.758 2c.401 0 .727.326.727.727v1.091h7.03v-1.09a.727.727 0 1 1 1.455 0v1.09h.484A2.545 2.545 0 0 1 18 6.364v9.09A2.545 2.545 0 0 1 15.454 18H4.545A2.545 2.545 0 0 1 2 15.454v-9.09a2.545 2.545 0 0 1 2.545-2.546h.485v-1.09c0-.402.326-.728.728-.728M4.545 5.273a1.09 1.09 0 0 0-1.09 1.09v.73c.33-.157.7-.245 1.09-.245h10.91c.39 0 .76.088 1.09.245v-.73a1.09 1.09 0 0 0-1.09-1.09zm12 4.12a1.09 1.09 0 0 0-1.09-1.09H4.544a1.09 1.09 0 0 0-1.09 1.09v6.061c0 .603.488 1.092 1.09 1.092h10.91a1.09 1.09 0 0 0 1.09-1.091zm-7.272 1.213c0-.402.325-.727.727-.727h.006c.402 0 .727.325.727.727v.006a.727.727 0 0 1-.727.727H10a.727.727 0 0 1-.727-.727zm1.818 0c0-.402.325-.727.727-.727h.006c.402 0 .728.325.728.727v.006a.727.727 0 0 1-.728.727h-.006a.727.727 0 0 1-.727-.727zm1.818 0c0-.402.326-.727.727-.727h.006c.402 0 .728.325.728.727v.006a.727.727 0 0 1-.728.727h-.006a.727.727 0 0 1-.727-.727zm-7.273 1.818c0-.401.326-.727.728-.727h.006c.401 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728h-.006a.727.727 0 0 1-.728-.728zm1.819 0c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728h-.006a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728H10a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.325-.727.727-.727h.006c.402 0 .728.326.728.727v.006a.727.727 0 0 1-.728.728h-.006a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.326-.727.727-.727h.006c.402 0 .728.326.728.727v.006a.727.727 0 0 1-.728.728h-.006a.727.727 0 0 1-.727-.728zm-7.273 1.818c0-.401.326-.727.728-.727h.006c.401 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728h-.006a.727.727 0 0 1-.728-.728zm1.819 0c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728h-.006a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728H10a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.325-.727.727-.727h.006c.402 0 .728.326.728.727v.006a.727.727 0 0 1-.728.728h-.006a.727.727 0 0 1-.727-.728z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`DateField should render correctly disabled 1`] = `
<DocumentFragment>
  .css-1wkb09n {
  width: 100%;
}

.css-1wkb09n div.react-datepicker-wrapper {
  display: block;
}

.css-1wkb09n div.react-datepicker__input-container {
  display: block;
}

.css-1wkb09n div.react-datepicker__triangle {
  display: none;
}

.css-1wkb09n div.react-datepicker__month-container {
  padding: 16px;
}

.css-1wkb09n .react-datepicker-popper {
  z-index: 1000;
}

.css-1wkb09n .calendar {
  font-family: Inter,Asap;
  border-color: #e9eaeb;
  background-color: #ffffff;
}

.css-1wkb09n .calendar .react-datepicker__header {
  color: #3f4250;
  background-color: #ffffff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.css-1wkb09n .calendar .react-datepicker__triangle {
  border-bottom-color: #f9f9fa;
}

.css-1wkb09n .calendar .react-datepicker__month {
  margin: 0;
}

.css-1wkb09n .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.css-1wkb09n .calendar .react-datepicker__day-name {
  font-family: Inter,Asap;
  color: #3f4250;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  margin: 3px;
  text-transform: capitalize;
}

.css-1wkb09n .calendar .react-datepicker__day {
  color: #727683;
  font-weight: 500;
  font-size: 16px;
  width: 26px;
  height: 26px;
  margin-left: 3px;
  margin-right: 3px;
}

.css-1wkb09n .calendar .react-datepicker__day--outside-month {
  color: #b5b7bd;
  font-weight: 500;
  font-size: 16px;
}

.css-1wkb09n .calendar .react-datepicker__day--selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.css-1wkb09n .calendar .react-datepicker__day--selected[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--selected:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.css-1wkb09n .calendar .react-datepicker__day--in-selecting-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.css-1wkb09n .calendar .react-datepicker__day--in-selecting-range[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--in-selecting-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.css-1wkb09n .calendar .react-datepicker__day--in-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.css-1wkb09n .calendar .react-datepicker__day--in-range[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--in-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.css-1wkb09n .calendar .react-datepicker__day--range-start {
  color: #ffffff;
  background-color: #8c40ef;
}

.css-1wkb09n .calendar .react-datepicker__day--range-start[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--range-start:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.css-1wkb09n .calendar .react-datepicker__day--range-end {
  color: #ffffff;
  background-color: #8c40ef;
}

.css-1wkb09n .calendar .react-datepicker__day--range-end[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--range-end:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.css-1wkb09n .calendar .react-datepicker__day--keyboard-selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.css-1wkb09n .calendar .react-datepicker__day:hover {
  color: #222638;
  background-color: #e9eaeb;
}

.css-1wkb09n .calendar .react-datepicker__day--disabled {
  color: #b5b7bd;
}

.css-1wkb09n .calendar .react-datepicker__day--disabled:hover {
  color: #b5b7bd;
  background-color: transparent;
}

.css-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1fbmuwp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1fbmuwp>.e7tir8v1 {
  color: #3f4250;
}

.css-1fbmuwp>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1fbmuwp>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1fbmuwp>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1fbmuwp>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1fbmuwp[data-success='true'] {
  border-color: #22674e;
}

.css-1fbmuwp[data-error='true'] {
  border-color: #b3144d;
}

.css-1fbmuwp[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1fbmuwp[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1fbmuwp[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1fbmuwp[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1fbmuwp[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1fbmuwp[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1fbmuwp[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1fbmuwp:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-2aies0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

.css-14gyx2a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 16px;
  border-left: 1px solid;
  border-color: inherit;
}

.css-4igx0u-sizeStyles {
  vertical-align: middle;
  fill: #b5b7bd;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.css-4igx0u-sizeStyles .fillStroke {
  stroke: #b5b7bd;
  fill: none;
}

<form>
    <div
      class="css-1wkb09n e1bm75lk1"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <div
            class=" css-16otux ehpbis70"
          >
            <div>
              <div
                class="css-1fbmuwp e7tir8v0"
                data-disabled="true"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  class="css-2aies0 e7tir8v1"
                  disabled=""
                  id=":r4:"
                  name="test"
                  type="text"
                  value=""
                />
                <div
                  class="css-14gyx2a e7tir8v3"
                >
                  <svg
                    class="css-4igx0u-sizeStyles e1gt4cfo0"
                    viewBox="0 0 20 20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.758 2c.401 0 .727.326.727.727v1.091h7.03v-1.09a.727.727 0 1 1 1.455 0v1.09h.484A2.545 2.545 0 0 1 18 6.364v9.09A2.545 2.545 0 0 1 15.454 18H4.545A2.545 2.545 0 0 1 2 15.454v-9.09a2.545 2.545 0 0 1 2.545-2.546h.485v-1.09c0-.402.326-.728.728-.728M4.545 5.273a1.09 1.09 0 0 0-1.09 1.09v.73c.33-.157.7-.245 1.09-.245h10.91c.39 0 .76.088 1.09.245v-.73a1.09 1.09 0 0 0-1.09-1.09zm12 4.12a1.09 1.09 0 0 0-1.09-1.09H4.544a1.09 1.09 0 0 0-1.09 1.09v6.061c0 .603.488 1.092 1.09 1.092h10.91a1.09 1.09 0 0 0 1.09-1.091zm-7.272 1.213c0-.402.325-.727.727-.727h.006c.402 0 .727.325.727.727v.006a.727.727 0 0 1-.727.727H10a.727.727 0 0 1-.727-.727zm1.818 0c0-.402.325-.727.727-.727h.006c.402 0 .728.325.728.727v.006a.727.727 0 0 1-.728.727h-.006a.727.727 0 0 1-.727-.727zm1.818 0c0-.402.326-.727.727-.727h.006c.402 0 .728.325.728.727v.006a.727.727 0 0 1-.728.727h-.006a.727.727 0 0 1-.727-.727zm-7.273 1.818c0-.401.326-.727.728-.727h.006c.401 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728h-.006a.727.727 0 0 1-.728-.728zm1.819 0c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728h-.006a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728H10a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.325-.727.727-.727h.006c.402 0 .728.326.728.727v.006a.727.727 0 0 1-.728.728h-.006a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.326-.727.727-.727h.006c.402 0 .728.326.728.727v.006a.727.727 0 0 1-.728.728h-.006a.727.727 0 0 1-.727-.728zm-7.273 1.818c0-.401.326-.727.728-.727h.006c.401 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728h-.006a.727.727 0 0 1-.728-.728zm1.819 0c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728h-.006a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728H10a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.325-.727.727-.727h.006c.402 0 .728.326.728.727v.006a.727.727 0 0 1-.728.728h-.006a.727.727 0 0 1-.727-.728z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`DateField should trigger events 1`] = `
<DocumentFragment>
  .css-1wkb09n {
  width: 100%;
}

.css-1wkb09n div.react-datepicker-wrapper {
  display: block;
}

.css-1wkb09n div.react-datepicker__input-container {
  display: block;
}

.css-1wkb09n div.react-datepicker__triangle {
  display: none;
}

.css-1wkb09n div.react-datepicker__month-container {
  padding: 16px;
}

.css-1wkb09n .react-datepicker-popper {
  z-index: 1000;
}

.css-1wkb09n .calendar {
  font-family: Inter,Asap;
  border-color: #e9eaeb;
  background-color: #ffffff;
}

.css-1wkb09n .calendar .react-datepicker__header {
  color: #3f4250;
  background-color: #ffffff;
  border-bottom: none;
  text-align: inherit;
  display: block;
  padding-top: 0;
  position: inherit;
}

.css-1wkb09n .calendar .react-datepicker__triangle {
  border-bottom-color: #f9f9fa;
}

.css-1wkb09n .calendar .react-datepicker__month {
  margin: 0;
}

.css-1wkb09n .calendar .react-datepicker__day-names {
  margin-top: 8px;
}

.css-1wkb09n .calendar .react-datepicker__day-name {
  font-family: Inter,Asap;
  color: #3f4250;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  margin: 3px;
  text-transform: capitalize;
}

.css-1wkb09n .calendar .react-datepicker__day {
  color: #727683;
  font-weight: 500;
  font-size: 16px;
  width: 26px;
  height: 26px;
  margin-left: 3px;
  margin-right: 3px;
}

.css-1wkb09n .calendar .react-datepicker__day--outside-month {
  color: #b5b7bd;
  font-weight: 500;
  font-size: 16px;
}

.css-1wkb09n .calendar .react-datepicker__day--selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.css-1wkb09n .calendar .react-datepicker__day--selected[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--selected:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.css-1wkb09n .calendar .react-datepicker__day--in-selecting-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.css-1wkb09n .calendar .react-datepicker__day--in-selecting-range[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--in-selecting-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.css-1wkb09n .calendar .react-datepicker__day--in-range {
  color: #641cb3;
  background-color: #f1eefc;
}

.css-1wkb09n .calendar .react-datepicker__day--in-range[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--in-range:disabled {
  color: #d8c5fc;
  background-color: #f6f5fd;
}

.css-1wkb09n .calendar .react-datepicker__day--range-start {
  color: #ffffff;
  background-color: #8c40ef;
}

.css-1wkb09n .calendar .react-datepicker__day--range-start[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--range-start:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.css-1wkb09n .calendar .react-datepicker__day--range-end {
  color: #ffffff;
  background-color: #8c40ef;
}

.css-1wkb09n .calendar .react-datepicker__day--range-end[aria-disabled='true'],
.css-1wkb09n .calendar .react-datepicker__day--range-end:disabled {
  color: #ffffff;
  background-color: #e5dbfd;
}

.css-1wkb09n .calendar .react-datepicker__day--keyboard-selected {
  color: #ffffff;
  background-color: #8c40ef;
}

.css-1wkb09n .calendar .react-datepicker__day:hover {
  color: #222638;
  background-color: #e9eaeb;
}

.css-1wkb09n .calendar .react-datepicker__day--disabled {
  color: #b5b7bd;
}

.css-1wkb09n .calendar .react-datepicker__day--disabled:hover {
  color: #b5b7bd;
  background-color: transparent;
}

.css-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-i5307t {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #8c40ef;
}

.css-i5307t>.e7tir8v1 {
  color: #3f4250;
}

.css-i5307t>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-i5307t>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-i5307t>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-i5307t>.e7tir8v1::placeholder {
  color: #727683;
}

.css-i5307t[data-success='true'] {
  border-color: #22674e;
}

.css-i5307t[data-error='true'] {
  border-color: #b3144d;
}

.css-i5307t[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-i5307t[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-i5307t[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-i5307t[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-i5307t[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-i5307t[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-i5307t[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-i5307t:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-2aies0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

.css-14gyx2a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 16px;
  border-left: 1px solid;
  border-color: inherit;
}

.css-8db7ky-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.css-8db7ky-sizeStyles .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<form>
    <div
      class="css-1wkb09n e1bm75lk1"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <div
            class=" css-16otux ehpbis70"
          >
            <div>
              <div
                class="css-i5307t e7tir8v0"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  class="css-2aies0 e7tir8v1"
                  id=":r7:"
                  name="test"
                  type="text"
                  value="08/28/2022"
                />
                <div
                  class="css-14gyx2a e7tir8v3"
                >
                  <svg
                    class="css-8db7ky-sizeStyles e1gt4cfo0"
                    viewBox="0 0 20 20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.758 2c.401 0 .727.326.727.727v1.091h7.03v-1.09a.727.727 0 1 1 1.455 0v1.09h.484A2.545 2.545 0 0 1 18 6.364v9.09A2.545 2.545 0 0 1 15.454 18H4.545A2.545 2.545 0 0 1 2 15.454v-9.09a2.545 2.545 0 0 1 2.545-2.546h.485v-1.09c0-.402.326-.728.728-.728M4.545 5.273a1.09 1.09 0 0 0-1.09 1.09v.73c.33-.157.7-.245 1.09-.245h10.91c.39 0 .76.088 1.09.245v-.73a1.09 1.09 0 0 0-1.09-1.09zm12 4.12a1.09 1.09 0 0 0-1.09-1.09H4.544a1.09 1.09 0 0 0-1.09 1.09v6.061c0 .603.488 1.092 1.09 1.092h10.91a1.09 1.09 0 0 0 1.09-1.091zm-7.272 1.213c0-.402.325-.727.727-.727h.006c.402 0 .727.325.727.727v.006a.727.727 0 0 1-.727.727H10a.727.727 0 0 1-.727-.727zm1.818 0c0-.402.325-.727.727-.727h.006c.402 0 .728.325.728.727v.006a.727.727 0 0 1-.728.727h-.006a.727.727 0 0 1-.727-.727zm1.818 0c0-.402.326-.727.727-.727h.006c.402 0 .728.325.728.727v.006a.727.727 0 0 1-.728.727h-.006a.727.727 0 0 1-.727-.727zm-7.273 1.818c0-.401.326-.727.728-.727h.006c.401 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728h-.006a.727.727 0 0 1-.728-.728zm1.819 0c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728h-.006a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728H10a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.325-.727.727-.727h.006c.402 0 .728.326.728.727v.006a.727.727 0 0 1-.728.728h-.006a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.326-.727.727-.727h.006c.402 0 .728.326.728.727v.006a.727.727 0 0 1-.728.728h-.006a.727.727 0 0 1-.727-.728zm-7.273 1.818c0-.401.326-.727.728-.727h.006c.401 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728h-.006a.727.727 0 0 1-.728-.728zm1.819 0c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728h-.006a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728H10a.727.727 0 0 1-.727-.728zm1.818 0c0-.401.325-.727.727-.727h.006c.402 0 .728.326.728.727v.006a.727.727 0 0 1-.728.728h-.006a.727.727 0 0 1-.727-.728z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
